--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -9,6 +9,8 @@
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
   flex-wrap: wrap;
   padding-left: 0;
   list-style: none;
